--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:jenkins.pipeline.linter.connector.validate"
+        "onLanguage:groovy"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -78,10 +78,12 @@
         "@types/node": "^7.0.43",
         "node.extend": ">=1.1.7",
         "tslint": "^5.8.0",
-        "typescript": "^2.6.1",
+        "prettier": "^2.0.2",
+        "typescript": "^4.1.0",
         "vscode": "^1.1.36"
     },
     "dependencies": {
+        "@types/request": "^2.48.8",
         "request": "^2.88.0",
         "url-parse": "^1.4.3"
     }
